--- a/app/templates/estudiantes/index.html
+++ b/app/templates/estudiantes/index.html
@@ -21,6 +21,7 @@
         <div class="card-body">
           <h5 class="card-title">Calificaciones</h5>
           <p class="card-text">Consulta tus notas por curso.</p>
+          <a href="{{ url_for('estudiantes.notas') }}" class="btn btn-light">Ver Calificaciones</a>
         </div>
       </div>
     </div>
