--- a/app/templates/admin/ejercicios/ver.html
+++ b/app/templates/admin/ejercicios/ver.html
@@ -199,7 +199,7 @@
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                                                <a href="{{ url_for('admin.calificar_respuesta', id=respuesta.id) }}" class="btn btn-primary">
+                                                                <a href="{{ url_for('admin.calificar_respuesta', ejercicio_id=ejercicio.id, respuesta_id=respuesta.id) }}" class="btn btn-primary">
                                                                     <i class="fas fa-check"></i> Calificar
                                                                 </a>
                                                             </div>
