--- a/app/templates/estudiantes/vista_juegos/index.html
+++ b/app/templates/estudiantes/vista_juegos/index.html
@@ -20,11 +20,11 @@
                                 <h5 class="card-title">{{ ejercicio.titulo }}</h5>
                                 <p class="card-text">{{ ejercicio.enunciado|safe }}</p>
                                 <div class="mt-4">
-                                    <button type="button" class="btn btn-primary w-100" 
-                                            data-bs-toggle="modal" 
-                                            data-bs-target="#juegoModal{{ ejercicio.id }}">
+                                    <a href="{{ url_for('static', filename=ejercicio.archivo_url) }}?ejercicio_id={{ ejercicio.id }}" 
+                                       class="btn btn-primary w-100" 
+                                       target="_blank">
                                         <i class="fas fa-play me-2"></i>Comenzar Juego
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -40,29 +40,7 @@
         </div>
     </div>
 
-    <!-- Modal para cada juego -->
-    {% for ejercicio in ejercicios %}
-    <div class="modal fade" id="juegoModal{{ ejercicio.id }}" tabindex="-1" aria-labelledby="juegoModalLabel{{ ejercicio.id }}" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="juegoModalLabel{{ ejercicio.id }}">{{ ejercicio.titulo }}</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    {% if ejercicio.archivo_url %}
-                    <iframe src="{{ url_for('static', filename=ejercicio.archivo_url) }}" 
-                            width="100%" height="600px" 
-                            style="border: none;" 
-                            allowfullscreen></iframe>
-                    {% else %}
-                    <p class="game-description">{{ ejercicio.enunciado|safe }}</p>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
+    <!-- Los ejercicios ahora se abren en una nueva pestaña -->
 </div>
 {% endblock %}
 
